[gd_scene load_steps=2 format=3 uid="uid://2w7f7on637s4"]

[ext_resource type="Script" uid="uid://6th25df8gdu1" path="res://pages/join.gd" id="1_haem1"]

[node name="HomePage" type="Node2D"]
script = ExtResource("1_haem1")

[node name="ui" type="CanvasLayer" parent="."]

[node name="multiplayer" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ui/multiplayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -46.5
offset_right = 38.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="ui/multiplayer/VBoxContainer"]
layout_mode = 2
text = "Multiplayer Arena Shooter"

[node name="OIDInput" type="LineEdit" parent="ui/multiplayer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Host OID"

[node name="Join" type="Button" parent="ui/multiplayer/VBoxContainer"]
layout_mode = 2
text = "join"

[node name="back" type="Button" parent="ui/multiplayer/VBoxContainer"]
layout_mode = 2
text = "back"

[node name="OID" type="Label" parent="ui/multiplayer/VBoxContainer"]
layout_mode = 2
text = "Loading...."

[connection signal="pressed" from="ui/multiplayer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="ui/multiplayer/VBoxContainer/back" to="." method="_on_back_pressed"]
